2007-12-11  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/lock.h: Add documentation for the Lockbit API.
	* doc/api/doxygen.config.in: Add avr/lock.h to the doc list.
	* include/avr/iom8.h: Add Fuse and Lockbit data.
	* include/avr/iotn43u.h: Add Lockbit data.
	* include/avr/io90pwm216.h: Add Lockbit data. Fix fuse data.
	* include/avr/io90pwm316.h: Add Lockbit data. Fix fuse data.
	* include/avr/io90pwm2b.h: Add Lockbit data. Fix fuse data.
	* include/avr/io90pwm3b.h: Add Lockbit data. Fix fuse data.
	* include/avr/iom88.h: Add Fuse data.
	* include/avr/iom168.h: Add Fuse data.
	* include/avr/iom128.h: Formatting.
	* include/avr/iom16.h: Add Fuse and Lockbit data.
	* include/avr/iom32.h: Ditto.
	* include/avr/iom64.h: Ditto.
	* include/avr/iom325.h: Ditto.
	* include/avr/iom3250.h: Ditto.
	* include/avr/iom645.h: Ditto.
	* include/avr/iom6450.h: Ditto.
	* include/avr/iom329.h: Ditto.
	* include/avr/iom3290.h: Ditto.
	* include/avr/iom649.h: Ditto.
	* include/avr/iom6490.h: Ditto.
	* include/avr/iom640.h: Ditto.
	* include/avr/iom1280.h: Ditto.
	* include/avr/iom1281.h: Ditto.
	* include/avr/iom2560.h: Ditto.
	* include/avr/iom2561.h: Ditto.
	* include/avr/iousb646.h: Ditto.
	* include/avr/iousb647.h: Ditto.
	* include/avr/iousb1286.h: Ditto.
	* include/avr/iousb1287.h: Ditto.
	* include/avr/iom8515.h: Ditto.
	* include/avr/iom161.h: Ditto.
	* include/avr/iom162.h: Ditto.
	* include/avr/iom163.h: Ditto.
	* include/avr/iousb82.h: Ditto.
	* include/avr/iousb162.h: Ditto.
	* include/avr/iom165.h: Ditto.
	* include/avr/iom165p.h: Ditto.
	* include/avr/iocan32.h: Ditto.
	* include/avr/iocan64.h: Ditto.
	* include/avr/iocan128.h: Ditto.
	* include/avr/io90pwmx.h: Ditto.
	* include/avr/io90pwm1.h: Ditto.
	* include/avr/iom169.h: Ditto.
	* include/avr/iom169p.h: Ditto.
	* include/avr/iom323.h: Ditto.
	* include/avr/iom406.h: Ditto.
	* include/avr/iotn261.h: Ditto.
	* include/avr/iotn461.h: Ditto.
	* include/avr/iotn861.h: Ditto.