@@ -14,6 +14,14 @@
 
   dtostre
 
+* Bugs fixed:
+
+  [#21749] AT90PWM316: _VECTORS_SIZE should be 128
+  [#21691] iomx8.h-> IVSEL and IVCE should not be available for ATmega48
+  [#21743] AT90PWM316 missing PSOC1 bit definitions
+  [#21626] Incorrect Bit Definition for ADC14 and ADC15 Digital Input Disable
+  [#21521] incorrect bit definitions in iotnx61.h
+
 * New devices supported:
 
   + ATtiny88
