@@ -1,3 +1,13 @@
+2007-12-12  Eric B. Weddington  <eric.weddington@atmel.com>
+
+	* include/avr/iom32hvb.h: Remove unused register.
+	* include/avr/io90pwm216.h: Fix IVT size. Fix for bug #21749.
+	* include/avr/io90pwm316.h: Ditto.
+	* include/avr/iomx8.h: Remove bits for mega48. Fix for bug #21691.
+	* include/avr/io90pwm316.h: Add bit defs. Fix for bug #21743.
+	* include/avr/iomxx0_1.h: Fix bit defs. Fix for bug #21626.
+	* include/avr/iotnx61.h: Fix bit defs. Fix for bug #21521.
+
 2007-12-11  Eric B. Weddington  <eric.weddington@atmel.com>
 
 	* include/avr/lock.h: Add documentation for the Lockbit API.
